@@ -1,3 +1,7 @@
+  20 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
+  gentoo-sources-image-4.19.84.ebuild:
+  sys-kernel/gentoo-sources-image: fix path
+
 *gentoo-sources-image-4.19.84 (20 Nov 2019)
 
   20 Nov 2019; Agostino Sarubbo <ago@gentoo.org> +files/bashrc,
